# imap-mcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  conftest.py  docker-compose.standalone.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: COMMIT_CONVENTIONS.md  DEPLOYMENT.md
imap_mcp/: __init__.py  auth.py  config.py  imap_client.py  logging_config.py  mcp_protocol.py  metrics.py  models.py  resources.py  server.py  smtp_client.py  tools.py
imap_mcp/workflows/: calendar_mock.py  invite_parser.py  meeting_reply.py
tests/: conftest.py  test_auth.py  test_config.py  test_imap_client.py  test_imap_client_concurrency.py  test_imap_client_drafts.py  test_imap_client_threading.py  test_imap_client_timing.py  test_infrastructure.py  test_logging_config.py  test_models.py  test_resources.py  test_server.py  test_server_health.py  test_server_metrics.py  test_smtp_client_composition.py  test_tools.py  test_tools_annotations.py  test_tools_orchestration.py  test_tools_reply.py  test_tools_tasks.py  test_unread_messages.py  test_utils.py
tests/integration/: test_imap_server_basic.py  test_mcp_cli_chat.py  test_mcp_cli_integration.py
tests/workflows/: test_calendar_mock.py  test_invite_parser.py  test_meeting_reply.py
